--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "Jayesh Joshi",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "prettier": "^3.3.2"
   }
 }
+ 
